[package]
name = "poc-rewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc-framework = { path = "../solana-submodules/solana-poc-framework" }
solana-program = { path = "../solana-patches/solana-program" }
solana-transaction-status = "=1.14.13"
solana-client = "=1.14.13"
solana-sdk = "=1.14.13"
spl-associated-token-account = "1.1.2"
solana-bpf-loader-program = { path = "../solana-patches/solana-bpf-loader-program" }
serde_json = "1.0.93"
anyhow = "1.0.69"

[patch.crates-io]
solana-bpf-loader-program = { path = "../solana-patches/solana-bpf-loader-program" }
solana-runtime = { path = "../solana-patches/solana-runtime" }
solana-program = { path = "../solana-patches/solana-program" }
solana_rbpf = { path = "../solana-submodules/solana-rbpf"}
