[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde_json = "1.0.93"
solana-client = "1.15.2"
solana-sdk = "1.15.2"
solana-transaction-status = "1.15.2"
uuid = {version="1.3.0", features=["v4", "fast-rng"]}
