[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
solana-client = "1.15.2"
solana-sdk = "1.15.2"
solana-transaction-status = "1.15.2"

