[package]
name = "solana-bpf-loader-program"
version = "1.14.13"
description = "Solana BPF loader"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-bpf-loader-program"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
lazy_static = "1.4.0"
libsecp256k1 = "0.6.0"
log = "0.4.17"
parking_lot = "0.12.1"
solana-measure = "=1.14.13"
solana-metrics = "=1.14.13"
solana-program-runtime = "=1.14.13"
solana-sdk = "=1.14.13"
solana-zk-token-sdk = "=1.14.13"
solana_rbpf = "=0.2.31"
thiserror = "1.0"

[dev-dependencies]
rand = "0.7.3"
solana-runtime = "=1.14.13"

[lib]
crate-type = ["lib"]
name = "solana_bpf_loader_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
